monticore-generator/src/test/resources/cocos/invalid/A4058/A4058a.mc4
package cocos.invalid.A4058;

grammar A4058a {

  symbol A = "Hello";
}
